[gd_scene load_steps=3 format=3 uid="uid://dklvtdgerxe54"]

[ext_resource type="Script" path="res://Scripts/IndustryBlock.gd" id="1_oofys"]
[ext_resource type="Texture2D" uid="uid://bweni00tvg2ju" path="res://Art/32x32_white_square.png" id="2_ydpy2"]

[node name="IndustryBlock" type="Control" node_paths=PackedStringArray("industry")]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_oofys")
industry = NodePath("")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ydpy2")
expand_mode = 1

[node name="ProducedGoodIcon" type="TextureRect" parent="."]
self_modulate = Color(0, 0.733333, 1, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ydpy2")

[node name="TempGoodLabel" type="Label" parent="ProducedGoodIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "Steel (12s)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressShade" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 0.392157)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ydpy2")
expand_mode = 1

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -22.0
offset_bottom = 14.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "Lv. 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IngredientsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -18.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Ingredient_1" type="TextureRect" parent="IngredientsContainer"]
self_modulate = Color(1, 0, 1, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("2_ydpy2")
expand_mode = 1

[node name="ProgressShade" type="TextureRect" parent="IngredientsContainer/Ingredient_1"]
self_modulate = Color(0, 0, 0, 0.392157)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ydpy2")
expand_mode = 1

[node name="TempGoodLabel" type="Label" parent="IngredientsContainer/Ingredient_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "Steel"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[node name="Ingredient_2" type="TextureRect" parent="IngredientsContainer"]
self_modulate = Color(1, 0, 1, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("2_ydpy2")
expand_mode = 1

[node name="ProgressShade" type="TextureRect" parent="IngredientsContainer/Ingredient_2"]
self_modulate = Color(0, 0, 0, 0.392157)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ydpy2")
expand_mode = 1

[node name="TempGoodLabel" type="Label" parent="IngredientsContainer/Ingredient_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "Steel"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[node name="Ingredient_3" type="TextureRect" parent="IngredientsContainer"]
self_modulate = Color(1, 0, 1, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("2_ydpy2")
expand_mode = 1

[node name="ProgressShade" type="TextureRect" parent="IngredientsContainer/Ingredient_3"]
self_modulate = Color(0, 0, 0, 0.392157)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ydpy2")
expand_mode = 1

[node name="TempGoodLabel" type="Label" parent="IngredientsContainer/Ingredient_3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "Steel"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1
